Example for -Xlog:help do not contain one with multiple tags

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • svc
    • b156

        In some email thread on hotspot-dev one user had problems with enabling logging for a particular tag combination. Looking at the help page shows that indeed such an example is missing.

        Here is the email question:

        I've tried "-Xlog:gc::ref" and "-Xlog:gc=ref" but neither works.

        I want to see this output:

          log_debug(gc, ref)("Ref Counts: Soft: " SIZE_FORMAT " Weak: " SIZE_FORMAT " Final: " SIZE_FORMAT " Phantom: " SIZE_FORMAT,
                             stats.soft_count(), stats.weak_count(), stats.final_count(), stats.phantom_count());
          log_develop_trace(gc, ref)("JNI Weak Reference count: " SIZE_FORMAT, count_jni_refs());

        I tried -Xlog:help and searc hed on the web for information about the
        -Xlog syntax, but no luck.

        Please add an example like this:

        -Xlog:gc+ref=debug
        Log messages tagged with 'gc' and 'ref' tags using 'debug' level to stdout, with default decorations.

        The JEP also contains similar examples.

        It would really be nice if this doc change would make jdk9.

              Assignee:
              Marcus Larsson (Inactive)
              Reporter:
              Thomas Schatzl
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: