8170855: Example for -Xlog:help do not contain one with multiple tags

Reviewed-by: dholmes